# JellyShift

./: .gitignore  README.md  config.example.yaml  install-web-autostart.cmd  pyproject.toml  run-hook-linux.sh  run-hook.cmd  run-hook.sh  run-web-service.cmd
src/jellyshift/: __init__.py  classifier.py  cli.py  config.py  log_config.py  naming.py  processor.py  review.py  run_recorder.py  tmdb.py  web_service.py
src/jellyshift/web/: app.py  models.py
src/jellyshift/web/routes/: api.py  pages.py
src/jellyshift/web/services/: hook_sync.py  log_parser.py  review_store.py  run_index.py  runner.py  settings_service.py
src/jellyshift/web/static/: app.js  style.css
src/jellyshift/web/templates/: base.html  invocation_detail.html  invocations.html  review.html  settings.html
tests/: test_classifier.py  test_config_save.py  test_hook_sync.py  test_log_parser.py  test_logging.py  test_naming.py  test_processor.py  test_review_store.py  test_run_recorder.py  test_web_api.py  test_web_service.py
