[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyshift"
version = "0.1.0"
description = "Move and rename qBittorrent downloads into Jellyfin-compatible library paths"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<0.16",
    "click>=8.0,<8.2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "jinja2>=3.1,<4",
    "ruamel.yaml>=0.18,<0.19",
]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
    "responses>=0.25,<0.26",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "jinja2>=3.1,<4",
    "ruamel.yaml>=0.18,<0.19",
    "httpx>=0.27,<1",
]

[project.scripts]
jellyshift = "jellyshift.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jellyshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
